--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
 
 
   <div class="Bottom-Container">
-    <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+    <a class="footer-link" href="https://www.linkedin.com/in/alfredo-orquiz/">LinkedIn</a>
     <a class="footer-link" href="https://twitter.com/">Twitter</a>
-    <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+    <a class="footer-link" href="">Website</a>
     <p class="Copyright">© 2022 Alfredo Orquiz</p>
   </div>
 
